Changes from Gitea 1.4 to DCS 1.4

--- a/integrations/mysql.ini.tmpl
+++ b/integrations/mysql.ini.tmpl
@@ -11,8 +11,7 @@ SSL_MODE = disable
 
 [indexer]
 ISSUE_INDEXER_PATH = integrations/indexers-mysql/issues.bleve
-REPO_INDEXER_ENABLED = true
-REPO_INDEXER_PATH = integrations/indexers-mysql/repos.bleve
+REPO_INDEXER_ENABLED = false
 
 [repository]
 ROOT = integrations/gitea-integration-mysql/gitea-repositories
