--- a/integrations/pgsql.ini.tmpl
+++ b/integrations/pgsql.ini.tmpl
@@ -11,8 +11,7 @@ SSL_MODE = disable
 
 [indexer]
 ISSUE_INDEXER_PATH = integrations/indexers-pgsql/issues.bleve
-REPO_INDEXER_ENABLED = true
-REPO_INDEXER_PATH = integrations/indexers-pgsql/repos.bleve
+REPO_INDEXER_ENABLED = false
 
 [repository]
 ROOT = integrations/gitea-integration-pgsql/gitea-repositories
