--- a/templates/explore/search.tmpl
+++ b/templates/explore/search.tmpl
@@ -1,3 +1,4 @@
+<i class="ui right floated fa fa-question-circle-o" title="_ for any character, % for any # of characters. Use \_ and \% to search for _ and %" style="margin-top:5px;margin-left:5px;font-size:2em;"></i>
 <div class="ui right floated secondary filter menu">
 <!-- Sort -->
 	<div class="ui right dropdown type jump item">
