--- a/templates/repo/create.tmpl
+++ b/templates/repo/create.tmpl
@@ -38,18 +38,20 @@
 						<input id="repo_name" name="repo_name" value="{{.repo_name}}" autofocus required>
 						<span class="help">{{.i18n.Tr "repo.repo_name_helper" | Safe}}</span>
 					</div>
+					{{if .SignedUser.IsAdmin}}
 					<div class="inline field">
-						<label>{{.i18n.Tr "repo.visibility"}}</label>
-						<div class="ui checkbox">
-							{{if .IsForcedPrivate}}
-								<input name="private" type="checkbox" checked readonly>
-								<label>{{.i18n.Tr "repo.visiblity_helper_forced" | Safe}}</label>
-							{{else}}
-								<input name="private" type="checkbox" {{if .private}}checked{{end}}>
-								<label>{{.i18n.Tr "repo.visiblity_helper" | Safe}}</label>
-							{{end}}
-						</div>
+					        <label>{{.i18n.Tr "repo.visibility"}}</label>
+					        <div class="ui checkbox">
+					                {{if .IsForcedPrivate}}
+					                        <input name="private" type="checkbox" checked readonly>
+					                        <label>{{.i18n.Tr "repo.visiblity_helper_forced" | Safe}}</label>
+					                {{else}}
+					                        <input name="private" type="checkbox" {{if .private}}checked{{end}}>
+					                        <label>{{.i18n.Tr "repo.visiblity_helper" | Safe}}</label>
+					                {{end}}
+					        </div>
 					</div>
+					{{end}}
 					<div class="inline field {{if .Err_Description}}error{{end}}">
 						<label for="description">{{.i18n.Tr "repo.repo_desc"}}</label>
 						<textarea id="description" name="description">{{.description}}</textarea>
@@ -57,11 +59,11 @@
 
 					<div class="ui divider"></div>
 
-					<div class="inline field">
-						<label>.gitignore</label>
+					<div class="inline field" style="display:none;">
+						<label>{{.i18n.Tr "repo.repo_lang"}}</label>
 						<div class="ui multiple search normal selection dropdown">
 							<input type="hidden" name="gitignores" value="{{.gitignores}}">
-							<div class="default text">{{.i18n.Tr "repo.repo_gitignore_helper"}}</div>
+							<div class="default text">{{.i18n.Tr "repo.repo_lang_helper"}}</div>
 							<div class="menu">
 								{{range .Gitignores}}
 									<div class="item" data-value="{{.}}">{{.}}</div>
@@ -71,33 +73,21 @@
 					</div>
 					<div class="inline field">
 						<label>{{.i18n.Tr "repo.license"}}</label>
-						<div class="ui search selection dropdown">
-							<input type="hidden" name="license" value="{{.license}}">
-							<div class="default text">{{.i18n.Tr "repo.license_helper"}}</div>
-							<div class="menu">
-								{{range .Licenses}}
-									<div class="item" data-value="{{.}}">{{.}}</div>
-								{{end}}
-							</div>
-						</div>
+						<span><a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_new">Creative Commons Attribution-ShareAlike 4.0 International License</a></span>
+						<input type="hidden" id="license" name="license" value="Creative Commons Attribution-ShareAlike 4.0 International License">
 					</div>
 
-					<div class="inline field">
-						<label>{{.i18n.Tr "repo.readme"}}</label>
-						<div class="ui selection dropdown">
-							<input type="hidden" name="readme" value="{{.readme}}">
-							<div class="default text">{{.i18n.Tr "repo.readme_helper"}}</div>
-							<div class="menu">
-								{{range .Readmes}}
-									<div class="item" data-value="{{.}}">{{.}}</div>
-								{{end}}
-							</div>
+					<div class="inline field" style="display:none;">
+						<div class="ui checkbox" id="readme">
+							<input class="hidden" name="readme" type="checkbox" value="Default" tabindex="0" checked>
+							<label>{{.i18n.Tr "repo.readme"}}</label>
 						</div>
 					</div>
 					<div class="inline field">
 						<div class="ui checkbox" id="auto-init">
-							<input class="hidden" name="auto_init" type="checkbox" tabindex="0" {{if .auto_init}}checked{{end}}>
+							<input class="hidden" name="auto_init" type="checkbox" tabindex="0" checked>
 							<label>{{.i18n.Tr "repo.auto_init"}}</label>
+							<span class="help">{{.i18n.Tr "repo.auto_init_helper" | Safe}}</span>
 						</div>
 					</div>
 
