--- a/templates/mail/issue/mention.tmpl
+++ b/templates/mail/issue/mention.tmpl
@@ -11,7 +11,7 @@
 	<p>
 		---
 		<br>
-		<a href="{{.Link}}">View it on Gitea</a>.
+		<a href="{{.Link}}">View it on Door43 Content Service</a>.
 	</p>
 </body>
 </html>
