--- a/templates/mail/notify/collaborator.tmpl
+++ b/templates/mail/notify/collaborator.tmpl
@@ -10,7 +10,7 @@
 	<p>
 		---
 		<br>
-		<a href="{{.Link}}">View it on Gitea</a>.
+		<a href="{{.Link}}">View it on Door43 Content Service</a>.
 	</p>
 </body>
 </html>
