--- a/templates/repo/header.tmpl
+++ b/templates/repo/header.tmpl
@@ -2,7 +2,7 @@
 {{with .Repository}}
 	<div class="ui container">
 		<div class="ui stackable grid header-grid">
-			<div class="eight wide column">
+			<div class="six wide column">
 				<div class="ui huge breadcrumb">
 					<i class="mega-octicon octicon-{{if .IsPrivate}}lock{{else if .IsMirror}}repo-clone{{else if .IsFork}}repo-forked{{else}}repo{{end}}"></i>
 					<a href="{{AppSubUrl}}/{{.Owner.Name}}">{{.Owner.Name}}</a>
@@ -13,7 +13,18 @@
 				</div>
 			</div>
 
-			<div class="ui eight wide right aligned column">
+			<div class="ui ten wide right aligned column">
+				<div class="ui compact labeled button" id="see-on-door43-button" tabindex="0">
+					<a class="ui compact button" target="_blank" href="https://door43.org/u/{{.Owner.Name}}/{{.Name}}/">
+						<!-- empty icon ensures that this button is same size as Watch/Star/Fork buttons -->
+						<i class="icon empty-icon"></i><span>{{$.i18n.Tr "repo.see_on_door43"}}</span>
+					</a>
+					<a class="ui basic left pointing label" href="https://door43.org/u/{{.Owner.Name}}/{{.Name}}/">
+						&#xfeff;<img id="door43-logo" src="/img/door43.png"/>
+					</a>
+				</div>
+				<div class="repo-button-separator">
+				</div>
 				<div class="ui compact labeled button" tabindex="0">
 					<a class="ui compact button" href="{{$.RepoLink}}/action/{{if $.IsWatchingRepo}}un{{end}}watch?redirect_to={{$.Link}}">
 						<i class="icon fa-eye{{if not $.IsWatchingRepo}}-slash{{end}}"></i>{{if $.IsWatchingRepo}}{{$.i18n.Tr "repo.unwatch"}}{{else}}{{$.i18n.Tr "repo.watch"}}{{end}}
@@ -49,7 +60,7 @@
 		<div class="ui tabular stackable menu navbar">
 			{{if .Repository.UnitEnabled $.UnitTypeCode}}
 			<a class="{{if .PageIsViewCode}}active{{end}} item" href="{{.RepoLink}}">
-				<i class="octicon octicon-code"></i> {{.i18n.Tr "repo.code"}}
+				<i class="octicon octicon-file-text"></i> {{.i18n.Tr "repo.code"}}
 			</a>
 			{{end}}
 
