--- a/templates/repo/pulls/fork.tmpl
+++ b/templates/repo/pulls/fork.tmpl
@@ -43,6 +43,7 @@
 						<label for="repo_name">{{.i18n.Tr "repo.repo_name"}}</label>
 						<input id="repo_name" name="repo_name" value="{{.repo_name}}" required>
 					</div>
+					{{if .SignedUser.IsAdmin}}
 					<div class="inline field">
 						<label>{{.i18n.Tr "repo.visibility"}}</label>
 						<div class="ui read-only checkbox">
@@ -51,6 +52,7 @@
 						</div>
 						<span class="help">{{.i18n.Tr "repo.fork_visiblity_helper"}}</span>
 					</div>
+					{{end}}
 					<div class="inline field {{if .Err_Description}}error{{end}}">
 						<label for="description">{{.i18n.Tr "repo.repo_desc"}}</label>
 						<textarea id="description" name="description">{{.description}}</textarea>
