--- a/templates/status/404.tmpl
+++ b/templates/status/404.tmpl
@@ -4,6 +4,6 @@
 	<div class="ui divider"></div>
 	<br>
 	{{if .ShowFooterVersion}}<p>Application Version: {{AppVer}}</p>{{end}}
-	<p>If you think this is an error, please open an issue on <a href="https://github.com/go-gitea/gitea/issues/new">GitHub</a>.</p>
+	<p>If you think this is an error, please open an issue by emailing <a href="mailto:help@door43.org">help@door43.org</a> or posting at <a href="https://team43.slack.com/messages/helpdesk" target="_blank">#helpdesk</a> on Slack.</p>
 </div>
 {{template "base/footer" .}}
