--- a/templates/user/auth/signup_inner.tmpl
+++ b/templates/user/auth/signup_inner.tmpl
@@ -13,13 +13,18 @@
 					{{if .DisableRegistration}}
 						<p>{{.i18n.Tr "auth.disable_register_prompt"}}</p>
 					{{else}}
+						<div>
+							{{.i18n.Tr "signup.agreement" | Safe}}
+						</div>
 						<div class="required inline field {{if and (.Err_UserName) (or (not .LinkAccountMode) (and .LinkAccountMode .LinkAccountModeRegister))}}error{{end}}">
 							<label for="user_name">{{.i18n.Tr "username"}}</label>
 							<input id="user_name" name="user_name" value="{{.user_name}}" autofocus required>
+							<span class="help">{{.i18n.Tr "signup.user_name_helper" | Safe}}</span>
 						</div>
 						<div class="required inline field {{if .Err_Email}}error{{end}}">
 							<label for="email">{{.i18n.Tr "email"}}</label>
 							<input id="email" name="email" type="email" value="{{.email}}" required>
+							<span class="help">{{.i18n.Tr "signup.email_helper" | Safe}}</span>
 						</div>
 						<div class="required inline field {{if and (.Err_Password) (or (not .LinkAccountMode) (and .LinkAccountMode .LinkAccountModeRegister))}}error{{end}}">
 							<label for="password">{{.i18n.Tr "password"}}</label>
